Fix mobile overflow; Remove article outline on focus

--- a/src/main/content/antora_ui/src/css/doc.css
+++ b/src/main/content/antora_ui/src/css/doc.css
@@ -11,6 +11,10 @@
   min-height: 1000px;
 }
 
+.doc:focus {
+  outline: none;
+}
+
 @media screen and (min-width: 767.98px) {
   .doc {
     font-size: var(--doc-font-size--desktop);
