--- a/src/main/content/antora_ui/src/css/main.css
+++ b/src/main/content/antora_ui/src/css/main.css
@@ -1,5 +1,6 @@
 main {
   padding-top: 0;
+  width: 100%;
 }
 
 @media screen and (min-width: 767.98px) {
