--- a/src/main/content/antora_ui/src/sass/highlightjs-custom.scss
+++ b/src/main/content/antora_ui/src/sass/highlightjs-custom.scss
@@ -12,6 +12,7 @@
  code {
     background-color: #f4f4f4;
     color: #5e6b8d;
+    word-wrap: break-word;
 }
 
 pre {
